derive/tests/snapshots/referenced_row_methods/Tournament/get_all_tournaments.snap
---
source: derive/src/characterization_tests.rs
---
impl<T: crate::spacetimedsl::WriteContext> crate::spacetimedsl::DSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    ///Get all rows inside the `tournament` table.
    pub fn get_all_tournaments<'a>(&'a self) -> impl Iterator<Item = Tournament> {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        self.db().tournament().iter()
    }
}
