derive/tests/snapshots/referenced_row_methods/Tournament/get_tournaments_by_opening_season_id.snap
---
source: derive/src/characterization_tests.rs
---
impl<T: crate::spacetimedsl::WriteContext> crate::spacetimedsl::DSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    ///Get a `Tournament` iterator that contains all rows in the `tournament` table whose value matches the value from the single-column btree index on the `opening_season_id` column.
    pub fn get_tournaments_by_opening_season_id<'a>(
        &'a self,
        opening_season_id: impl Into<SeasonId>,
    ) -> impl Iterator<Item = Tournament> {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        self.db()
            .tournament()
            .opening_season_id()
            .filter(opening_season_id.into().value())
    }
}
impl<T: crate::spacetimedsl::ReadContext> crate::spacetimedsl::ReadOnlyDSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    ///Get a `Tournament` iterator that contains all rows in the `tournament` table whose value matches the value from the single-column btree index on the `opening_season_id` column.
    pub fn get_tournaments_by_opening_season_id<'a>(
        &'a self,
        opening_season_id: impl Into<SeasonId>,
    ) -> impl Iterator<Item = Tournament> {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        self.db()
            .tournament()
            .opening_season_id()
            .filter(opening_season_id.into().value())
    }
}
